@@ -2065,6 +2065,7 @@
 68) kernel: net: fq_codel: explicitly reset flows in ->reset().<br>
 69) kernel: net: ppp: take reference on channels netns.<br>
 70) kernel: net: bridge: fix old ioctl unlocked net device walk.<br>
+71) kernel: net: bridge: fix igmp / mld query parsing.<br>
 <br>
 <br>
 <br>
